# internal/api/web_referee_api/web_referee_api.go
@@ -1,6 +1,7 @@
 package web_referee_service_api
 
 import (
+	"github.com/google/uuid"
 	"github.com/tengenatari/web-referee/internal/models"
 	"github.com/tengenatari/web-referee/internal/pb/web_referee_api"
 	"golang.org/x/net/context"
@@ -8,9 +9,11 @@ import (
 
 type WebRefereeService interface {
 	HealthCheck(ctx context.Context) error
-	CreateUser(ctx context.Context, user *models.User) error
-	CreateTournament(ctx context.Context, tournament *models.Tournament) error
-	CreatePlayer(ctx context.Context, player *models.Player) error
+	CreateUser(ctx context.Context, user *models.User) (string, error)
+	CreateTournament(ctx context.Context, tournament *models.Tournament) (string, error)
+	CreatePlayer(ctx context.Context, player *models.Player) (string, error)
+	CreatePairing(ctx context.Context, tournamentId uuid.UUID) error
+	GetPairing(ctx context.Context, tournamentId uuid.UUID) ([]*models.Game, error)
 }
 
 type WebRefereeServiceAPI struct {
