# internal/models/models.go
@@ -9,7 +9,6 @@ import (
 type User struct {
 	Id        uuid.UUID
 	Name      string
-	Email     string
 	TigrId    string
 	Rating    int64
 	CreatedAt time.Time
@@ -27,4 +26,14 @@ type Player struct {
 	TournamentId uuid.UUID
 	UserId       uuid.UUID
 	MacMahon     int64
+}
+
+type Game struct {
+	Id          uuid.UUID
+	White       uuid.UUID
+	Black       uuid.UUID
+	TourNum     int64
+	GameUrl     string
+	ResultBlack int64
+	ResultWhite int64
 }
